--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   margin: 0;
   font-family: 'Montserrat', sans-serif;
   color: #333;
-  background-color: #ffffff;
+  
 }
 
 .landing-page {
@@ -248,6 +248,7 @@ max-width: 200px;
   flex-direction: column;
   max-width: 400px;
   margin: 0 auto;
+  background-color: #fff;
 }
 
 .registration-form input {
