--- a/src/App.css
+++ b/src/App.css
@@ -257,6 +257,7 @@ max-width: 200px;
   font-size: 1rem;
   border-radius: 1rem;
   border: solid 2px  #1c294b;
+  background-color: #fff;
 }
 
 .footer {
